--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -31,7 +31,7 @@
 }
 
 .card .price {
-  color: orangered; /* nicer green */
+  color: orangered; 
   font-weight: 700;
   font-size: 18px;
   margin: 5px 0;
